src/test/resources/typeSystemTestModels/invalid/classes/ClassNoModifierDuplicate.java
package typeSystemTestModels.valid.classes;

public public class ClassNoModifierDuplicate {

}